Fixed footer issues on mobile view

--- a/css/gpw-base.scss
+++ b/css/gpw-base.scss
@@ -6,10 +6,7 @@ body {
   overflow-x: hidden;
 }
 
-.copyright {
-  top: 45%;
-  font-size: 1.2em;
-}
+
 
 #gopikaContainer {
   margin-top: 85px;
@@ -21,10 +18,27 @@ body {
 
 #footerDiv {
   position: relative;
-  height: 60px;
+  min-height: 40px;
   width: 100%;
   background-color: #2c2c2c;
   color: white;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
+  text-align: center;
+  padding: 10px;
+}
+
+.copyright {
+  font-size: 14px;
+}
+
+@media (min-width: 768px) {
+  #footerDiv {
+    min-height: 60px;
+    padding: 15px;
+  }
+
+  .copyright {
+    font-size: 18px;
+  }
 }
 
