--- a/css/gpw-home.scss
+++ b/css/gpw-home.scss
@@ -3,7 +3,6 @@
   width: 100%;
 }
 
-
 #logoName {
   float: right;
   color: white;
@@ -134,7 +133,7 @@
     font-weight: bold;
   }
 
-  .fitem { height: 140px; }
+  .fitem { height: 180px; }
 
   .motto-emphasis {
     font-weight: bold;
